# demailer

./: LICENSE.md  README.md  pyproject.toml  runner.py
demailer/: config.py  mail.py  processor.py  tg.py
