[tool.poetry]
name = "demailer"
version = "0.1.0"
description = "Simple email-to-telegram proxy with some filtering"
authors = ["Eugen Weissbart <eugen@weissbart.me>"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.8"
environ-config = "^20.1.0"
pyTelegramBotAPI = "^3.7.6"
timeloop = "^1.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
ipython = "^7.19.0"
jedi = "0.17.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
